<resources>
    <string name="app_name">Inventory</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="minus_string">-</string>
    <string name="plus_string">+</string>
    <string name="unit">Unit</string>
    <string name="type">Type</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="expires_button_default_string">Expires…</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notifications_enabled_pref_summary">Receive daily notifications for items that are expiring soon.</string>
    <string name="notification_time_pref_summary">When to receive a notification each day.</string>
    <string name="expiration_interval_pref_summary">You will be notified for expired items and items expiring within %1$s.</string>
    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>
    <string name="add_an_item">Add an item</string>
    <string name="finish_adding_item">Finish Adding Item</string>
    <string name="settings">Settings</string>
    <string name="edit_new_item">Edit New Item</string>
    <string name="inventory_color">Inventory Color</string>
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="clear_date">Clear Date</string>
    <string name="save_date">Save Date</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="expiration">Expiration</string>
    <string name="change">Change…</string>
    <string name="edit">Edit</string>
    <string name="add_to_grocery_list">Add to Grocery List</string>
    <string name="delete">Delete</string>
    <string name="sort_by">Sort By…</string>
    <string name="search">Search</string>
    <string name="add_new_inventory">Add New Inventory</string>
    <string name="save">Save</string>
</resources>
