<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Expiration Notifications">
        <SwitchPreference
            android:key="notificationsEnabled"
            android:title="Notifications"
            android:summary="@string/notifications_enabled_pref_summary"
            android:defaultValue="true"/>

        <com.kevinkyang.inventory.TimePreference
            android:dependency="notificationsEnabled"
            android:key="notificationTime"
            android:title="Notification Time"
            android:summary="@string/notification_time_pref_summary"/>

        <ListPreference
            android:dependency="notificationsEnabled"
            android:key="expirationInterval"
            android:title="Expiration Interval"
            android:summary="@string/expiration_interval_pref_summary"
            android:dialogTitle="Expiration Interval"
            android:entries="@array/array_expires_pref_names"
            android:entryValues="@array/array_expires_pref_names"
            android:defaultValue="3 days"/>

    </PreferenceCategory>

</PreferenceScreen>