<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/activity_default_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_quantity"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/quantity"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_expiration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:entries="@array/array_expires_dates">

        </Spinner>


    </LinearLayout>


    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="end|bottom"
        android:text="@string/add"/>

</LinearLayout>